refactor(DFA): replace Integer(int value) by valueOf(int)
Class DFA generates the Scanner.java file. As such, the changes made in
the generated Scanner.java file need to be reflected here. This way, the
new generated classes will have the new static factory valueOf as
opposed to new Integer(int value).